Tue Sep 28 16:08:56 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* DAnCE/Config_Handlers/ADD_Handler.cpp:
	* DAnCE/Config_Handlers/ADD_Handler.h:
	* DAnCE/Config_Handlers/Config_Handlers.mpc:
	* DAnCE/Config_Handlers/MDD_Handler.cpp:

	  Made some changes to MDD and ADD handlers to register the
	  IDREF's  and find the IDREF's.

Tue Sep 28 15:16:03 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* DAnCE/Config_Handlers/XSCRT/Elements.hpp:
	* DAnCE/Config_Handlers/XSCRT/Elements.ipp:
	* DAnCE/Config_Handlers/XSCRT/Elements.tpp:
	* DAnCE/Config_Handlers/XSCRT/ExtendedTypeInfo.hpp:
	* DAnCE/Config_Handlers/XSCRT/ExtendedTypeInfo.ipp:
	* DAnCE/Config_Handlers/XSCRT/Parser.hpp:
	* DAnCE/Config_Handlers/XSCRT/Parser.ipp:
	* DAnCE/Config_Handlers/XSCRT/Parser.tpp:
	* DAnCE/Config_Handlers/XSCRT/Traversal.hpp:
	* DAnCE/Config_Handlers/XSCRT/Traversal.ipp:
	* DAnCE/Config_Handlers/XSCRT/Traversal.tpp:
	* DAnCE/Config_Handlers/XSCRT/XMLSchema.hpp:
	* DAnCE/Config_Handlers/XSCRT/XMLSchema.ipp:
	* DAnCE/Config_Handlers/XSCRT/XMLSchema.tpp:

	  Checked in XSCRT-0.0.5

Tue Sep 28 14:43:48 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* DAnCE/Config_Handlers/Basic_Deployment_Data.cpp:
	* DAnCE/Config_Handlers/Basic_Deployment_Data.hpp:
	* DAnCE/Config_Handlers/ccd.cpp:
	* DAnCE/Config_Handlers/ccd.hpp:

	  Newly generated XSC code.
	
 	* DAnCE/Config_Handlers/ADD_Handler.cpp:
	* DAnCE/Config_Handlers/ADD_Handler.h:
	* DAnCE/Config_Handlers/Any_Handler.cpp:
	* DAnCE/Config_Handlers/CCD_Handler.cpp:
	* DAnCE/Config_Handlers/CPD_Handler.cpp:
	* DAnCE/Config_Handlers/CPD_Handler.h:
	* DAnCE/Config_Handlers/CRDD_Handler.cpp:
	* DAnCE/Config_Handlers/ComponentPropertyDescription_Handler.cpp:
	* DAnCE/Config_Handlers/ComponentPropertyDescription_Handler.h:
	* DAnCE/Config_Handlers/Config_Handlers.mpc:
	* DAnCE/Config_Handlers/MDD_Handler.cpp:
	* DAnCE/Config_Handlers/MDD_Handler.h:
	* DAnCE/Config_Handlers/PCD_Handler.cpp: